# rules_shellcheck

./: .bazelrc  .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CHANGELOG.md  LICENSE  MODULE.bazel  README.md  WORKSPACE  def.bzl  deps.bzl  extensions.bzl  shellcheck.bzl
.bcr/: metadata.json  metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: bcr-publish.yml  create_archive_and_notes.sh  examples.yml  release.yml  release_prep.sh  workflow.yml
ci/: package.sh
examples/: BUILD.bazel
examples/bzlmod/: .bazeliskrc  BUILD.bazel  MODULE.bazel
examples/check_glob/: BUILD.bazel  WORKSPACE
examples/optional_attributes/: BUILD.bazel
examples/released_example/: MODULE.bazel  WORKSPACE
examples/released_example/src/: BUILD.bazel
internal/: BUILD.bazel  rules.bzl
internal/pkg/: BUILD.bazel  release.sh  release_notes.tmpl.md
shellcheck/: .shellcheckrc  BUILD.bazel  defs.bzl  shellcheck_aspect.bzl  shellcheck_test.bzl  shellcheck_toolchain.bzl
shellcheck/internal/: BUILD.bazel  aspect_runner.bat  aspect_runner.sh  extensions.bzl  rules.bzl  toolchain.bzl
shellcheck/settings/: BUILD.bazel
tests/: BUILD.bazel  test.bzl
tests/example/: BUILD.bazel
tests/follow_source/lib1/: BUILD.bazel  lib1.sh
tests/follow_source/lib2/: BUILD.bazel  lib2.sh
tools/ci/: ci-test.sh
tools/scripts/: bootstrap.sh  buildifier  shellcheck
