filegroup(
    name = "distribution",
    srcs = [
        "BUILD.bazel",
        "CHANGELOG.md",
        "LICENSE",
        "MODULE.bazel",
        "README.md",
        "WORKSPACE",
        "//internal:distribution",
    ],
    visibility = ["//internal/pkg:__pkg__"],
)

alias(
    name = "release",
    actual = "//internal/pkg:release",
    visibility = ["//:__subpackages__"],
)

config_setting(
    name = "darwin_x86_64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "linux_aarch64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
)

alias(
    name = "shellcheck",
    actual = select(
        {
            ":darwin_x86_64": "@shellcheck_darwin_amd64//:shellcheck",
            ":linux_aarch64": "@shellcheck_linux_arm64//:shellcheck",
            ":linux_x86_64": "@shellcheck_linux_amd64//:shellcheck",
        },
        no_match_error = "binaries for your platform could not be found",
    ),
    visibility = ["//visibility:public"],
)
