filegroup(
    name = "distribution",
    srcs = [
        "BUILD.bazel",
        "CHANGELOG.md",
        "LICENSE",
        "MODULE.bazel",
        "README.md",
        "WORKSPACE",
        "//shellcheck:distribution",
        # Needed for BCR registry to run the pre-submit tests
        "//examples:distribution",
    ],
    visibility = ["//internal/pkg:__pkg__"],
)

alias(
    name = "release",
    actual = "//internal/pkg:release",
    visibility = ["//:__subpackages__"],
)

alias(
    name = "shellcheck",
    actual = "//shellcheck:current_shellcheck_toolchain",
    visibility = ["//visibility:public"],
)
