load(":test.bzl", shellcheck_test = "shellcheck_internal_test")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

shellcheck_test(
    name = "fail_test",
    data = [
        "testdata/bad.sh",
    ],
    expect_fail = True,
)

shellcheck_test(
    name = "success_test",
    data = [
        "testdata/good.sh",
    ],
)

sh_binary(
    name = "bad",
    srcs = ["testdata/bad.sh"],
    tags = ["manual"],
)

sh_binary(
    name = "good",
    srcs = ["testdata/good.sh"],
)
