module(
    name = "released_example",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_shellcheck", version = "0.2.3")
# For now one has to do the following override
archive_override(
    module_name = "rules_shellcheck",
    urls = ["https://github.com/aignas/rules_shellcheck/releases/download/0.2.3/rules_shellcheck-0.2.3.tar.gz"],
    integrity = "sha256-e4XzyaZ58fcuJWSx3LQU9jDTaW3dhN2Qyc4uWw/3of4=",
)
