filegroup(
    name = "distribution",
    srcs = glob(["*"]),
    visibility = ["//shellcheck:__pkg__"],
)

filegroup(
    name = "aspect_runner",
    srcs = select({
        "@platforms//os:windows": ["aspect_runner.bat"],
        "//conditions:default": ["aspect_runner.sh"],
    }),
    visibility = ["//visibility:public"],
)
