filegroup(
    name = "distribution",
    srcs = glob(["*"]),
    visibility = ["//shellcheck:__pkg__"],
)

alias(
    name = "aspect_runner",
    actual = select({
        "@platforms//os:windows": "aspect_runner.bat",
        "//conditions:default": "aspect_runner.sh",
    }),
    visibility = ["//visibility:public"],
)
