load("@rules_shell//shell:sh_library.bzl", "sh_library")

sh_library(
    name = "lib2",
    srcs = ["lib2.sh"],
    visibility = ["//tests/follow_source:__subpackages__"],
)

# TODO: https://github.com/aignas/rules_shellcheck/issues/53
# shellcheck_test(
#     name = "lib2_test",
#     data = [
#         ":lib2",
#     ],
# )
